[project]
name = "brazil-ai-use-heatmap-lab"
version = "0.1.0"
description = "Regional digital adoption analysis lab with synthetic CETIC-style indicators and heatmap visualization."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alberto Mateus P. da Gama" }]

[tool.pytest.ini_options]
pythonpath = ["."]
